gccida/g0/expand_end_loop
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3128:4: error: expected ';' after expression
rtx next_insn; // [rsp+28h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3130:4: error: expected ';' after expression
rtx insn; // [rsp+38h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3130:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+38h] [rbp-28h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3134:4: error: expected ';' after expression
rtx etc_note; // [rsp+50h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3134:5: error: use of undeclared identifier 'etc_note'
rtx etc_note; // [rsp+50h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3135:4: error: expected ';' after expression
rtx start_label; // [rsp+58h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3135:5: error: use of undeclared identifier 'start_label'
rtx start_label; // [rsp+58h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3137:1: error: use of undeclared identifier 'start_label'
start_label = cfun->stmt->x_loop_stack->data.cond.endif_label; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3138:6: error: use of undeclared identifier 'start_label'
if ( start_label == cfun->stmt->x_loop_stack->data.loop.continue_label ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3139:24: error: use of undeclared identifier 'start_label'
emit_note_before( -94, start_label); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3143:7: error: use of undeclared identifier 'etc_note'; did you mean 'itk_none'?
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
      ^~~~~~~~
      itk_none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/tree.h:2033:3: note: 'itk_none' declared here
  itk_none
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3143:18: error: use of undeclared identifier 'start_label'
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3143:31: error: use of undeclared identifier 'etc_note'
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3143:41: error: use of undeclared identifier 'etc_note'; did you mean 'itk_none'?
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                                        ^~~~~~~~
                                        itk_none
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/tree.h:2033:3: note: 'itk_none' declared here
  itk_none
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3143:52: error: use of undeclared identifier 'etc_note'
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3145:17: error: use of undeclared identifier 'etc_note'
if ( *( _WORD *)etc_note == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3147:10: error: use of undeclared identifier 'etc_note'
switch ( etc_note[2].fld[0].rtint ) 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3152:1: error: use of undeclared identifier 'etc_note'
etc_note = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/stmt.c:3171:6: error: use of undeclared identifier 'etc_note'
if ( etc_note && optimize && !eh_regions && ( !debug_blocks || optimize > 1) ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_end_loop/src/obj/stmt.o] Error 1
